# price_list

./: README.md  pyproject.toml
.github/workflows/: ci.yml
price_list/: hooks.py
price_list/fixtures/: server_script.json
price_list/price_list/custom/: item.json  item_barcode.json  item_group.json  purchase_invoice_item.json  warehouse.json
price_list/price_list/doctype/item_category/: item_category.js  item_category.json  item_category.py  test_item_category.py
price_list/price_list/doctype/item_classification/: item_classification.js  item_classification.json  item_classification.py  test_item_classification.py
price_list/price_list/doctype/product_performance/: product_performance.js  product_performance.json  product_performance.py  test_product_performance.py
price_list/price_list/doctype/warehouse_valuation/: warehouse_valuation.json  warehouse_valuation.py
